--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
   </head>
   <body class="antialiased h-fit w-full flex flex-col justify-center items-center color-{darkslategray} bg-{mintcream}">
-    <header class="w-full bg-emerald-900">
+    <header class="w-full bg-green-900">
       <nav class="w-full p-6 flex justify-start items-center">
         <a href="#" class="flex items-center justify-center text-white">
           <strong>EcoRifa 💚🍀</strong>
